# gamu

./: .clang-tidy  .gitignore  .mise.toml  Cargo.toml  Dockerfile  justfile  meson.build
.github/workflows/: ci.yml
src/: lib.rs  logic.rs  logic_test.rs  main.c  main.rs  types.rs
